# critique.rs

./: .gitignore  Cargo.toml  README.md  flake.nix  justfile  schema.json
critique2boxd/: Cargo.toml
critique2boxd/src/: args.rs  main.rs
critique_api/: Cargo.toml
critique_api/gql/: schema.graphql
critique_api/gql/query/user/: user_collection.graphql
critique_api/src/: error.rs  lib.rs
critique_random/: Cargo.toml  README.md
critique_random/src/: main.rs
critique_website/: Cargo.toml  Dioxus.toml
critique_website/assets/: main.css  tailwind.css
critique_website/css/: tailwind.config.js
critique_website/src/: main.rs
docs/: 404.html  index.html
docs/assets/: critique_website-dxhd02f84331ef9720.js  critique_website-dxhf1d510ab634756d4.js  critique_website_bg-dxh7bb0128897158dd9.wasm  critique_website_bg-dxhdc512ca534d63017.wasm  main-dxh3972bc35b89e493.css  tailwind-dxh2df68caf6c88604.css  tailwind-dxh3bc6a32ad504e3d.css  tailwind-dxh6166f41930acdf2c.css  tailwind-dxh70e46281ce59dddc.css  tailwind-dxh7b28f24b1ce0303.css  tailwind-dxh9abaa71846bfbc7.css  tailwind-dxha8f8c196af8ae9ba.css  tailwind-dxhd5905ffb600d7e7.css
docs/wasm/: critique_website.js
gql/: schema.graphql  schema2.json
gql/query/user/: user_collection.graphql
src/: lib.rs
