[workspace]

members = [ "critique2boxd", "critique_api", "critique_random" ]
resolver = "2"

[workspace.dependencies]
clap = { version = "4.5.1", features = ["derive"] }
color-eyre = "0.6.2"
thiserror = "2.0.12"
graphql_client = "0.14.0"
reqwest = "0.12.22"
rand = "0.9.2"
csv = "1.3.0"
serde = "1.0.196"
