[package]
name = "critique_api"
version = "0.1.0"
edition = "2024"
license-file = "../LICENSE.txt"
description = "Interface to the SensCritique API"
repository = "https://github.com/SilentVoid13/critique.rs"
categories = ["api-bindings"]
keywords = ["api", "senscritique"]

[dependencies]
graphql_client = { workspace = true, features = ["graphql_query_derive", "reqwest-blocking"] }
reqwest = { workspace = true, features = ["blocking", "json"] }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
